More alignment fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,6 +88,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 #coverHeading{
@@ -187,12 +189,12 @@ p {
 }
 
 .experienceContent{
-  margin: 15px auto;
+  margin: 0px 15px 15px 15px;
   width: 40vw;
   height: 20vh;
   text-align: center;
   font-size: 1.25em;
-  line-height: 1.25em;
+  line-height: 1.10em;
 }
 
 .linkStyle{
@@ -203,17 +205,17 @@ p {
   margin: 5px auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;;
-  height: 90vh;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .flex-horizontal{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     justify-content: space-around;
     width: 100vw;
-    height: 100vh;
+    height: 120vh;
 }
 
 
@@ -237,7 +239,7 @@ p {
   align-items: center;
 
   width: 100vw;
-  height: 100vh;
+  height: 120vh;
 }
 
 #aboutMeContent{
@@ -248,9 +250,9 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   width: 100vw;
-  height: 120vh;
+  height: 100vh;
 }
 
 
